--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,13 +16,22 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+    - name: Check out my1562normalizer
+      uses: actions/checkout@v1
+      with:
+        repository: https://github.com/corporateanon/my1562normalizer
+        path: ./data
+          
+    # - name: Get dependencies
+    #   run: |
+    #     go get -v -t -d ./...
+    #     if [ -f Gopkg.toml ]; then
+    #         curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+    #         dep ensure
+    #     fi
+
+    - name: Build data file
+      run: go run ./data
 
     - name: Test
       run: go test .
