--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,13 +23,14 @@ jobs:
         path: ./data
         ref: master
           
-    # - name: Get dependencies
-    #   run: |
-    #     go get -v -t -d ./...
-    #     if [ -f Gopkg.toml ]; then
-    #         curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-    #         dep ensure
-    #     fi
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+
+    - name: Get dependencies for normalizer
+      run: |
+        go get -v -t -d ./...
+      working-directory: ./data/gobify
 
     - name: Build data file
       run: go run .
