--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,8 +20,7 @@ jobs:
       uses: actions/checkout@v1
       with:
         repository: corporateanon/my1562normalizer
-        path: ./data
-        ref: master
+        path: data
           
     - name: Get dependencies
       run: |
